valetparking-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valetparking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-database
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-database
  template:
    metadata:
      labels:
        app: mongo-database
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-database
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 30017
  selector:
    app: mongo-database
---
# === BEGIN CONTROL SERVER ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlserver
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controlserver
  template:
    metadata:
      labels:
        app: controlserver
    spec:
      containers:
        - name: controlserver
          image: imkannadiga/controlserver:latest
          ports:
            - containerPort: 10001
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: controlserver
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 10001
      nodePort: 30001
  selector:
    app: controlserver
---
# === BEGIN MAP SERVER ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapserver
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapserver
  template:
    metadata:
      labels:
        app: mapserver
    spec:
      containers:
        - name: mapserver
          image: imkannadiga/mapserver:latest
          ports:
            - containerPort: 10002
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mapserver
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 10002
      nodePort: 30002
  selector:
    app: mapserver
---
# === BEGIN HEARTBEAT SERVICE ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartbeat
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heartbeat
  template:
    metadata:
      labels:
        app: heartbeat
    spec:
      containers:
        - name: heartbeat-service
          image: imkannadiga/heartbeat-service:latest
          ports:
            - containerPort: 10010
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: heartbeat-service
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 10010
      nodePort: 30010
  selector:
    app: heartbeat
---
# === BEGIN AUTH SERVICE ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: imkannadiga/auth-service:latest
          ports:
            - containerPort: 10005
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 10005
      targetPort: 10005
      nodePort: 30090
  selector:
    app: auth-service
---
# === BEGIN UI SERVICE (Python Valet Tester) ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: imkannadiga/ui-service:latest
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "4"
              memory: "512Mi"
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ui-service
#   namespace: valetparking
# spec:
#   type: NodePort
#   ports:
#     - port: 80
#       targetPort: 80
#       nodePort: 30080
#   selector:
#     app: ui-service
---
# === BEGIN PARKING SPOT MANAGER ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-spot-manager
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-spot-manager
  template:
    metadata:
      labels:
        app: parking-spot-manager
    spec:
      containers:
        - name: parking-spot-manager
          image: imkannadiga/parking-spot-manager:latest
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: parking-spot-manager
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 9001
      targetPort: 9001
      nodePort: 30901
  selector:
    app: parking-spot-manager
---
# === BEGIN VALETPARKING ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valetparking
  namespace: valetparking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valetparking
  template:
    metadata:
      labels:
        app: valetparking
    spec:
      containers:
        - name: valetparking
          image: imkannadiga/valetparking:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: valetparking
  namespace: valetparking
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30900
  selector:
    app: valetparking
